# PataNode

./: .gitattributes  .gitignore  DoG.json  README.md  app.py  app3.py  bloom_test.json  curlnoise.json  dither_scale.json  dog_dither_style.json  double_physa.json  eye.json  glcontext.py  gss.json  lightning.json  lrep.json  main.py  main_light.py  motherboard.json  old_app.py  physa14.json  ptt3d.json  pyproject.toml  requirements.txt  sst_test.json  template.json  test.json  test2.json  test_gate.json  ultraaglitch.json  util.py  zozotunneleye.json  zozoxagons.json
.vimsess/: doublephysarum.sess
artnet/: __init__.py  controller.py  definitions.py  net_util.py  node.py
audio/: __init__.py  audio_bpm.py  audio_conf.py  audio_event.py  audio_logger.py  audio_pipeline.py  audio_utils.py
controller/: __init__.py  controller.py  launch_control_xl.py  midi_debug.py  qt_controller.py
data/: patate_.xcf
gui/: __init__.py  graphcontainer.py  mappingwindow.py  patanode.py  subwindow.py
light/: core.py  device.py  light.py  light_func.py  shader_mapper.py
light_new/: __init__.py  cracra.py  current_sceno.yml  dropamine.yml  light_outputs.py  patterns.py  sceno_nouveau_casino.yml
node/: __init__.py  a.py  audio_node_base.py  audio_widget.py  conf.py  drag_listbox.py  graph_container_node.py  inspector.py  node_conf.py  patanode.py  shader_node_base.py  shader_widget.py  subwindow.py
nodeeditor/: __init__.py  node_content_widget.py  node_edge.py  node_edge_dragging.py  node_edge_intersect.py  node_edge_rerouting.py  node_edge_snapping.py  node_edge_validators.py  (+16 more)
(+446 files in other folders)
